Small fix of styling and identify cause of horizontal app overflow

--- a/src/components/searchHeader/searchHeader.css
+++ b/src/components/searchHeader/searchHeader.css
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 670px) {
   .searchHeader {
-    width: 90%;
+    width: 100%;
     flex-direction: column;
     gap: 1rem;
   }
