--- a/src/components/showCard/showCard.css
+++ b/src/components/showCard/showCard.css
@@ -2,19 +2,20 @@
   display: flex;
   flex-direction: column;
   justify-content: stretch;
+  /* height: 28vw;  TODO: height of posters causing overflow in app*/ 
   margin: 0;
 }
 
 .tvShowPoster {
-  width: 100%;
-  height: 25vw;
+  /* width: 100%; */
+  /* height: 25vw; */
   object-fit: cover;
   background-color: rgba(95, 158, 160, 0.13);
 }
 
 .noPosterState {
   width: 100%;
-  height: 25vw;
+  /* height: 25vw; */
   text-align: center;
   background-color: rgba(0, 0, 0, 0.226);
   display: flex;
@@ -43,7 +44,7 @@
 @media screen and (max-width: 670px) {
   .tvShowPoster,
   .noPosterState {
-    height: 70vw;
+    /* height: 70vw; */
   }
 
   .title {
