--- a/src/index.css
+++ b/src/index.css
@@ -5,25 +5,29 @@
 
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  /* overflow-x: hidden; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-
-
   --desktop-view-width: 80%;
   --mobile-view-width: 90%;
 }
 
+* {
+  margin: 0px;
+}
+
+#root {
+  box-sizing: border-box;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
 body {
-  margin: 0;
+  /* margin: 0; */
   min-width: 100vw;
   min-height: 100vh;
 }
